--- a/pkg/common/config.json
+++ b/pkg/common/config.json
@@ -1,4 +1,5 @@
 {
   "server": ":10086",
-  "fb_token": "490895874437565|3ce74d840577a6d598af56cd46fd0450"
+  "fb_token": "490895874437565|3ce74d840577a6d598af56cd46fd0450",
+  "version": "1.0.0"
 }
