--- a/glide.yaml
+++ b/glide.yaml
@@ -1,7 +1,6 @@
 package: github.com/llitfkitfk/cirkol
 import:
 - package: github.com/gin-gonic/gin
-- package: github.com/parnurzeal/gorequest
-  version: ^0.2.13
+- package: github.com/valyala/fasthttp
 - package: github.com/Sirupsen/logrus
   version: ^0.10.0
